deploy/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbasicauth
  namespace: tools
  labels:
    app: httpbasicauth
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: httpbasicauth
